# CausalInference

./: README.md  pyproject.toml
notebooks/: coarsened_exact_matching.ipynb  propensity_score_weighting.ipynb  propensity_score_weighting_xgboost.ipynb
