[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Rodrigo Franco <rodrigo.franco.09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
numpy = "^1.24.3"
causalinference = "^0.1.3"
causaldata = "^0.1.3"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
